# duolingo-clone

./: .gitignore
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 19d0369a6d94_create_users_table.py
backend/api/: deps.py
backend/api/routes/: auth_router.py
backend/core/: settings.py
backend/db/: database.py  deps.py
backend/models/: __init__.py  user_models.py
backend/schemas/: auth_schemas.py
backend/services/: auth_service.py
backend/utils/: auth_utils.py
